Fix for z-index

--- a/src/components/back.less
+++ b/src/components/back.less
@@ -24,6 +24,8 @@
     -webkit-tap-highlight-color: transparent;
     
     display: none;
+    
+    z-index: 20;
 }
 
 .back_visible
